--- a/app/src/main/res/layout/chosen_item_task_data_cell.xml
+++ b/app/src/main/res/layout/chosen_item_task_data_cell.xml
@@ -6,27 +6,17 @@
     android:layout_height="wrap_content"
     android:layout_centerInParent="false"
     android:layout_centerHorizontal="false"
-    android:background="#C2F8F2">
-
-    <CheckBox
-        android:id="@+id/taskCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:background="#D5D04E">
 
     <LinearLayout
         android:id="@+id/container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/deleteButton"
-        app:layout_constraintStart_toEndOf="@+id/taskCheckBox"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
