--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -8,49 +8,71 @@
     tools:context=".GameActivity">
 
     <LinearLayout
-        android:id="@+id/timerTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center_horizontal"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/timerHoursTextView"
+            android:id="@+id/nowTaskNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="00" />
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="16dp"
+            android:gravity="center_vertical"
+            android:text="Nowタスク名"
+            android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/hoursToMinutes"
+        <LinearLayout
+            android:id="@+id/timerTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=":" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/timerMinutesTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="00" />
+            <TextView
+                android:id="@+id/timerHoursTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00"
+                android:textSize="30sp" />
 
-        <TextView
-            android:id="@+id/minutesToSeconds"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=":" />
+            <TextView
+                android:id="@+id/hoursToMinutes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=":"
+                android:textSize="30sp" />
 
-        <TextView
-            android:id="@+id/timerSecondsTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="00" />
+            <TextView
+                android:id="@+id/timerMinutesTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/minutesToSeconds"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=":"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/timerSecondsTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00"
+                android:textSize="30sp" />
+        </LinearLayout>
     </LinearLayout>
 
     <ProgressBar
         android:id="@+id/TimerProgressBar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -63,7 +85,7 @@
     <RelativeLayout
         android:id="@+id/gameScreenView"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="350dp"
         android:layout_marginTop="100dp"
         android:background="#5CC3F1"
         app:layout_constraintEnd_toEndOf="parent"
