--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -89,8 +89,10 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="110dp"
         android:layout_marginEnd="120dp"
+        android:fontFamily="sans-serif-black"
         android:text="分"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/editTextNumberSigned"
