--- a/app/src/main/res/layout/activity_success.xml
+++ b/app/src/main/res/layout/activity_success.xml
@@ -8,6 +8,20 @@
     tools:context=".FailureActivity">
 
     <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="107dp"
+        android:layout_marginBottom="140dp"
+        android:text="よくやり切った！！"
+        android:textColor="#09BCD3"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/faikureToMainButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
+
+    <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
